moved all font files to /fonts instead of under their own fontname eg /fonts/mazius/fontfile.woff2

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Necto;
-    src: url("../fonts/necto-mono/NectoMono-Regular.woff2") format("woff2");
+    src: url("../fonts/NectoMono-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -10,12 +10,12 @@
 
 @font-face {
     font-family: Aujournuit;
-    src: url("../fonts/aujournuit/Aujournuit-Regular.woff2") format("woff2");
+    src: url("../fonts/Aujournuit-Regular.woff2") format("woff2");
 }
 
 @font-face {
     font-family: Absans;
-    src: url("../fonts/absans/Absans-Regular.woff2") format("woff2");
+    src: url("../fonts/Absans-Regular.woff2") format("woff2");
 }
 
 body {
