--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
 
 body {
     margin: 0;
-
     background-color: #292E42;
     background-size: cover;
     background-repeat: no-repeat;
@@ -30,13 +29,11 @@ body {
 .content {
     text-align: center;
     height: auto;
-
     border-radius: 0px;
     background: rgba(38, 38, 38, 0.599);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
     backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
 }
 
 .subcontent {
@@ -48,7 +45,6 @@ body {
     margin: 30px;
     padding: 30px;
     backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
 
     border-radius: 10px;
     background: rgba(38, 38, 38, 0.6);
@@ -70,7 +66,7 @@ body {
 
 .card.alt {
     width: 400px;
-    height: 56§0px;
+    height: 560px;
 }
 
 .logo {
