--- a/css/style.css
+++ b/css/style.css
@@ -18,74 +18,113 @@
     src: url("../fonts/Absans-Regular.woff2") format("woff2");
 }
 
-body {
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+html,body {
+    height: 100%;
+    background: #272931;
+}
+
+.container {
+    padding: 0;
     margin: 0;
-    background-color: #292E42;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
 .content {
-    text-align: center;
-    height: auto;
-    border-radius: 0px;
-    background: rgba(38, 38, 38, 0.599);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset,
-    rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
-    backdrop-filter: blur(5px);
+    /*text-align: center;*/
+    /*height: 100%;*/
 }
 
 .subcontent {
-    width: 1000px;
-    padding-top: 250px;
-}
-
-.cols {
-    margin: 30px;
-    padding: 30px;
-    backdrop-filter: blur(15px);
-
-    border-radius: 10px;
-    background: rgba(38, 38, 38, 0.6);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+    max-width: 900px;
+    /*width: 100%;*/
+    padding-top: 240px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .card {
-    margin: 30px;
+    animation: fadeIn 1s ease-out;
     padding: 30px;
     padding-top: 10px;
-    /*width: 190px;*/
-    /*height: 254px;*/
-    border-radius: 30px;
+    border-radius: 10px;
     background: rgba(38, 38, 38, 1);
-
-
     box-shadow: rgba(50, 50, 93, 0) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.5) 0px 18px 26px -18px inset;
 }
 
-.card.alt {
-    width: 400px;
-    height: 560px;
+.card.menu-item {
+    margin-bottom: 20px; /* Add some spacing between cards */
 }
+
+.card.text-box {
+    margin-bottom: 20px; /* Add some spacing between cards */
+}
+
+.weather-container {
+    font-size: 10px;
+    font-family: Necto;
+}
+
 
 .logo {
-    margin: 10px;
-    max-width: 300px;
+    margin-top: 10px;
+    max-width: 280px;
 }
 
-.map {
-    height: 450px;
+@media (max-width: 992px) {
+    .logo {
+        width: 180px;
+    }
+}
+
+@media (max-width: 576px) {
+    .logo {
+        width: 140px;
+    }
+}
+
+.restaurant-image {
+    object-fit: fill;
     border-width: 10px;
     border-color: black;
     border-radius: 20px;
     overflow: hidden;
 }
 
+.cart-text {
+    font-family: Necto;
+}
+
+.map {
+    animation: fadeIn 2s ease-in;
+    height: 450px;
+    border-width: 10px;
+    border-color: black;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.dropdown-card {
+    padding: 10px;
+}
+
+.cart-item {
+    border: 1px solid gray;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 nav {
-    font-family: Mazius, "Courier New", Courier, monospace;
+    font-family: Aujournuit, "Courier New", Courier, monospace;
     font-size: 22px;
-    /*font-weight: bold;*/
     background: rgba(31, 35, 53, 0.18);
     border-bottom: 1px solid rgba(97, 97, 97, 0.35);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
@@ -104,6 +143,12 @@ h3 {
     font-size: 30px;
     color: #ff9e64 ;
     padding-top: 15px;
+}
+
+h4 {
+    font-family: Necto, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #ff9e64 ;
 }
 
 p {
