added font-display for custom fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,25 @@
 @font-face {
     font-family: Necto;
     src: url("../fonts/NectoMono-Regular.woff2") format("woff2");
+    font-display: auto;
 }
 
 @font-face {
     font-family: Mazius;
     src: url("../fonts/MaziusDisplay-Regular.woff2") format("woff2");
+    font-display: auto;
 }
 
 @font-face {
     font-family: Aujournuit;
     src: url("../fonts/Aujournuit-Regular.woff2") format("woff2");
+    font-display: auto;
 }
 
 @font-face {
     font-family: Absans;
     src: url("../fonts/Absans-Regular.woff2") format("woff2");
+    font-display: auto;
 }
 
 @keyframes fadeIn {
@@ -123,7 +127,7 @@ html,body {
 }
 
 nav {
-    font-family: Aujournuit, "Courier New", Courier, monospace;
+    font-family: Aujournuit, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px;
     background: rgba(31, 35, 53, 0.18);
     border-bottom: 1px solid rgba(97, 97, 97, 0.35);
@@ -153,7 +157,7 @@ h4 {
 
 p {
     font-size: 17px;
-    font-family: Aujournuit, "Courier New", Courier, monospace;
+    font-family: Aujournuit, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: white ;
 }
