--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,26 @@
     }
 }
 
+@keyframes slideIn {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 
 html,body {
     height: 100%;
@@ -42,17 +62,24 @@ html,body {
     margin: 0;
 }
 
-.content {
-    /*text-align: center;*/
-    /*height: 100%;*/
-}
-
 .subcontent {
     max-width: 900px;
     /*width: 100%;*/
     padding-top: 240px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+@media (max-width: 992px) {
+    .subcontent {
+        padding-top: 185px;
+    }
+}
+
+@media (max-width: 576px) {
+    .subcontent {
+        padding-top: 165px;
+    }
 }
 
 .card {
@@ -64,14 +91,15 @@ html,body {
 }
 
 .card.menu-item {
-    margin-bottom: 20px; /* Add some spacing between cards */
+    margin-bottom: 20px;
 }
 
 .card.text-box {
-    margin-bottom: 20px; /* Add some spacing between cards */
+    margin-bottom: 20px;
 }
 
 .weather-container {
+    animation: fadeIn 2s ease-in;
     font-size: 10px;
     font-family: Necto, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -99,7 +127,7 @@ html,body {
     object-fit: fill;
     border-width: 10px;
     border-color: black;
-    border-radius: 20px;
+    border-radius: 10px;
     overflow: hidden;
 }
 
@@ -119,7 +147,7 @@ html,body {
 nav {
     font-family: Aujournuit, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px;
-    background: rgba(31, 35, 53, 0.18);
+    background: rgba(31, 35, 53, 0.48);
     border-bottom: 1px solid rgba(97, 97, 97, 0.35);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(8px);
@@ -160,11 +188,13 @@ p {
 
 .feedback {
     font-family: Aujournuit, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    padding: 15px 20px;
+    max-width: 900px;
+    padding: 20px 20px;
     border-radius: 5px;
-    background: rgba(31, 35, 53, 0.18);
-    border: 1px solid rgba(97, 97, 97, 0.35);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+    background: rgba(31, 35, 53, 0.48);
+    border: 2px solid rgba(97, 97, 97, 0.35);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(8px);
-    animation: fadeIn 1s ease-out;
+    animation: slideIn 0.5s ease-out, fadeOut 0.5s 3s ease-in forwards;
 }
+
